--- a/docs/vote-escrow/voting-power.mdx
+++ b/docs/vote-escrow/voting-power.mdx
@@ -11,13 +11,13 @@ slug: /vote-escrow/voting-power
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The Helium Foundation has implemented HIP-70 and migrated our L1 to Solana. Voting on Helium
-Improvement Proposals is performed with vote eskrowed tokens.
+Improvement Proposals is performed with vote escrowed tokens.
 
 ## Key Take Aways
 
 - veHNT gives holders voting rights to determine the future of the Helium Network.
-- Post migration, anyone can stake HNT to veHNT, and there will no longer be a 10,000 HNT minimum.
-- After the minimum lock-up period, HNT releases to the owner's wallet after staking cooldown is
+- Post-migration, anyone can stake HNT to veHNT, and there will no longer be a 10,000 HNT minimum.
+- After the minimum lock-up period, HNT releases to the owner's wallet after the staking cooldown is
   selected.
 
 ---
@@ -36,9 +36,9 @@ Additionally, this provides other benefits, such as earning MOBILE or IOT tokens
 delegates their veHNT to those subDAOs, respectively. After the lock-up period ends, the same amount
 of HNT is released back to the owner's wallet and is now transferable, if needed.
 
-### What Are The Benefits of Staking HNT after the subDAOs launch
+### What Are The Benefits of Staking HNT after the subDAOs launch?
 
-Now the Solana migration has completed, stakers can use their staked veHNT to vote on proposals in
+Now the Solana migration has been completed, stakers can use their staked veHNT to vote on proposals in
 the HeliumDAO and help the DAO make collective decisions, influencing the future of the Network.
 
 Stakers will additionally be able to delegate veHNT to a subDAO for token rewards. Delegating veHNT
@@ -47,8 +47,8 @@ to a subDAO will count towards the DAO Utility Score, the `V` value referenced i
 
 ### Where Does My HNT Go if I Stake veHNT?
 
-If you lock-up your HNT for veHNT, your HNT will become veHNT and remain entirely in your wallet's
-custody. veHNT ownership is represented by a non transferable Solana NFT held in your wallet. At the
+If you lock up your HNT for veHNT, your HNT will become veHNT and remain entirely in your wallet's
+custody. veHNT ownership is represented by a non-transferable Solana NFT held in your wallet. At the
 end of the lock-up period, you will receive HNT back to your wallet 1:1 for the HNT you staked.
 
 ### What Is a "Lock-Up" Period?
@@ -92,7 +92,7 @@ the more veHNT holders the 6% will have to be shared between.
 ### How Will Staking Work By Using veHNT?
 
 Anyone can stake any amount of HNT and lock it up for 1 day to 1461 days ( 48 months). You choose
-your unstaking date at the time of lock-up or deciding to keep it on a rolling lock-up period,
+your unstaking date at the time of lock-up or decide to keep it on a rolling lock-up period,
 called "constant lock-up" before initiating the start or the veHNT decay process. The HNT staked is
 exchanged for veHNT, which provides two benefits:
 
@@ -111,15 +111,15 @@ HNT for 1 day will exchange 1:0.06844627 HNT to veHNT. Those that stake veHNT fo
 receive an exchange of 1:100 HNT to veHNT. Any period in between will be treated on a linear scale
 from 0.0684462 to 100.
 
-> For example, I choose to lock-up 10 HNT for six months. I receive 125 veHNT. If I decide to
+> For example, I choose to lock up 10 HNT for six months. I receive 125 veHNT. If I decide to
 > unstake immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is
 > available to me for use in my wallet.
 
-A combination of an amount of HNT locked-up for a specified duration and the assigned veHNT is
+A combination of an amount of HNT locked up for a specified duration and the assigned veHNT is
 called a "Position". It is possible to own multiple Positions in your wallet. Actions taken on a
 Position - like e.g. on the lock-up duration, delegating the veHNT, voting with the veHNT - are all
 or nothing options. If a Position owner would like to receive rewards from two SubDAOs, then the
-HNT-veHNT Position would need to be split into two Positions - by transfering some HNT to a second
+HNT-veHNT Position would need to be split into two Positions - by transferring some HNT to a second
 position within the same wallet. Then each position could delegate to a different subDAO. Similarly,
 wishing to extend the lock-up duration on parts of a Position requires a similar split by transfer.
 
@@ -141,8 +141,8 @@ This landrush period will end at 23:59:59 UTC on April 28, 2023.
 For example:
 
 > Staking 10 HNT during this Landrush period with a lock duration of six months gets 375 veHNT
-> (10x12.5x3) that if cooldown is selected decays from 375 to 0 veHNT at the end of the staking
-> period, and 10 HNT is returned to the wallet.
+> (10x12.5x3) that, if a cooldown is selected, decays from 375 to 0 veHNT at the end of the
+> staking period, and 10 HNT is returned to the wallet.
 
 > Staking 20 HNT during this Landrush period with a lock duration of 24 months returns 3000 veHNT
 > (20x50x3), and at the end of the staking period, 20 HNT is returned to the wallet.
@@ -165,7 +165,7 @@ delegating to that subDAO.
 The table below shows the approximate HNT to veHNT multiplier for example months of staking
 
 This value is multiplied by 3x during the first 10 days after the Solana transition and this
-multiplier lasts as long as the last lock-up period selected in the first 10 days after the solana
+multiplier lasts as long as the last lock-up period selected in the first 10 days after the Solana
 migration.
 
 | Months staked | veHNT received |     | Months staked | veHNT received |
@@ -211,14 +211,14 @@ A 48-month lock-in period has approximately 1461 linear steps between 100 veHNT 
 > 4 years x 365.25 days epochs per day = 1461 steps
 
 After 1 day has passed after staking a single 1 HNT for 48 months, the quantity of veHNT in the
-wallet will decay from 100 veHNT to 99.86311 veHNT. This decrease will recur linearly over all the
+wallet will decay from 100 veHNT to 99.86311 veHNT. This decrease will recur linearly over the
 remaining 48 months until it hits zero.
 
 ### Can I Increase My Staking Lock-up Period At Any Time?
 
-Yes. You can increase your lock-up period by extending to the maximum of 48 months at any time, and
+Yes. You can increase your lock-up period by extending it to a maximum of 48 months at any time, and
 the increase activates at the start of the next epoch. If the veHNT is delegated you must
-undelegate, change the period and redelegate and lose delegation rewards within that 24 hour Epoch.
+undelegate, change the period, redelegate, and lose delegation rewards within that 24 hour Epoch.
 If those three actions take longer than an epoch or are split over two epochs then delegation
 rewards are lost for two Epochs.
 
@@ -229,8 +229,8 @@ period for any reason.
 
 ### Can I Automate Re-Staking?
 
-Yes a constant rolling lock-up period is available called Constant Lock-up. The decay countdown
-start point will be positive action needed to start the lock-up cooldown period.
+Yes, a constant rolling lock-up period is available called Constant Lock-up. The decay countdown
+start point will be need positive action to start the lock-up cooldown period.
 
 > Staking 10 HNT for 4 years will get approx 1000 veHNT and this will be a rolling 4 year period and
 > will remain at 1000 veHNT until the decay countdown is activated and this will then decrease
@@ -239,11 +239,11 @@ start point will be positive action needed to start the lock-up cooldown period.
 ### Can I Transfer my veHNT or any of the veDNTs to Someone Else?
 
 No. veHNT and the like are fully non-transferable and represent your voting power in the Network. It
-is not a token. It is represented in the wallet by a non transferable NFT.
+is not a token. It is represented in the wallet by a non-transferable NFT.
 
 ### How Do I Buy veHNT or Any of the veDNTs?
 
-You cannot buy veHNT, veIOT or veMOBILE. They are not a tradable tokens. veHNT can only be obtained
+You cannot buy veHNT, veIOT, or veMOBILE. They are not tradable tokens. veHNT can only be obtained
 by staking HNT with a lock-up period. Likewise, for veIOT or veMOBILE.
 
 veHNT and veDNTs have no price in the larger crypto markets.
@@ -282,8 +282,8 @@ They may decrease when:
 
 - More veHNT is delegated in the subDAO you delegated to - your share is reduced
 - More veHNT is delegated to other subDAOs - other treasuries get more HNT.
-- Your delegated veHNT decays over time after you entered cooldown.
-- More Hotspots are online in other subDAOs with a non zero onboarding fee.
+- Your delegated veHNT decays over time after you entered the cooldown.
+- More Hotspots are online in other subDAOs with a non-zero onboarding fee.
 - More data is transferred and burned in other subDAOs.
 
 Thus it can be observed that delegating more or all of your veHNT to a specific subDAO has the
