--- a/docs/vote-escrow/voting-power.mdx
+++ b/docs/vote-escrow/voting-power.mdx
@@ -38,8 +38,8 @@ of HNT is released back to the owner's wallet and is now transferable, if needed
 
 ### What Are The Benefits of Staking HNT after the subDAOs launch?
 
-Now the Solana migration has been completed, stakers can use their staked veHNT to vote on proposals in
-the HeliumDAO and help the DAO make collective decisions, influencing the future of the Network.
+Now the Solana migration has been completed, stakers can use their staked veHNT to vote on proposals
+in the HeliumDAO and help the DAO make collective decisions, influencing the future of the Network.
 
 Stakers will additionally be able to delegate veHNT to a subDAO for token rewards. Delegating veHNT
 to a subDAO will count towards the DAO Utility Score, the `V` value referenced in
@@ -92,8 +92,8 @@ the more veHNT holders the 6% will have to be shared between.
 ### How Will Staking Work By Using veHNT?
 
 Anyone can stake any amount of HNT and lock it up for 1 day to 1461 days ( 48 months). You choose
-your unstaking date at the time of lock-up or decide to keep it on a rolling lock-up period,
-called "constant lock-up" before initiating the start or the veHNT decay process. The HNT staked is
+your unstaking date at the time of lock-up or decide to keep it on a rolling lock-up period, called
+"constant lock-up" before initiating the start or the veHNT decay process. The HNT staked is
 exchanged for veHNT, which provides two benefits:
 
 - Voting in the Helium DAO on new subDAO proposals and Participating in the Governance.
@@ -141,8 +141,8 @@ This landrush period will end at 23:59:59 UTC on April 28, 2023.
 For example:
 
 > Staking 10 HNT during this Landrush period with a lock duration of six months gets 375 veHNT
-> (10x12.5x3) that, if a cooldown is selected, decays from 375 to 0 veHNT at the end of the
-> staking period, and 10 HNT is returned to the wallet.
+> (10x12.5x3) that, if a cooldown is selected, decays from 375 to 0 veHNT at the end of the staking
+> period, and 10 HNT is returned to the wallet.
 
 > Staking 20 HNT during this Landrush period with a lock duration of 24 months returns 3000 veHNT
 > (20x50x3), and at the end of the staking period, 20 HNT is returned to the wallet.
@@ -218,9 +218,9 @@ remaining 48 months until it hits zero.
 
 Yes. You can increase your lock-up period by extending it to a maximum of 48 months at any time, and
 the increase activates at the start of the next epoch. If the veHNT is delegated you must
-undelegate, change the period, redelegate, and lose delegation rewards within that 24 hour Epoch.
-If those three actions take longer than an epoch or are split over two epochs then delegation
-rewards are lost for two Epochs.
+undelegate, change the period, redelegate, and lose delegation rewards within that 24 hour Epoch. If
+those three actions take longer than an epoch or are split over two epochs then delegation rewards
+are lost for two Epochs.
 
 ### Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?
 
