--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -110,8 +110,8 @@ As long as HNT is available in your linked account, new stakes can be created by
 ### Lockup Period
 
 In order to build a secure voting system, Helium only allows votes from token holders willing to
-align themselves with the long-term health of the Helium Network. This is done by allowing holders to
-receive veHNT in proportion to the amount of time that the tokens are staked for.
+align themselves with the long-term health of the Helium Network. This is done by allowing holders
+to receive veHNT in proportion to the amount of time that the tokens are staked for.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/lockup.png')} />
@@ -157,9 +157,9 @@ then it declines linearly until release.
 
 ### Duration
 
-The duration of your cooldown is defined as days. The longer your tokens are staked, the more veHNT
-will be issued. If you chose the 'Constant' lockup period, this duration takes effect after the
-'Unlock' action is executed.
+The duration of your cooldown is set in units of days. The longer your tokens are staked, the more
+veHNT will be issued. If you chose the 'Constant' lockup period, this duration takes effect after
+the 'Unlock' action is executed.
 
 While it is possible to set a higher duration than 4 years, no additional vote weight multiplier
 will be added.
@@ -241,16 +241,16 @@ You must undelegate before splitting a stake. You can redelegate after the split
 
 ### Transfer a Stake
 
-Neither staked tokens nor the NFT representing a stake can be transferred from one wallet to another.
-Stakes can only be transferred from one position to another within the same wallet. Positions can
-only transfer to positions of greater or equal duration. This functionality is useful for
-consolidating positions. Landrush positions cannot have more locked tokens transferred into them
+Neither staked tokens nor the NFT representing a stake can be transferred from one wallet to
+another. Stakes can only be transferred from one position to another within the same wallet.
+Positions can only transfer to positions of greater or equal duration. This functionality is useful
+for consolidating positions. Landrush positions cannot have more locked tokens transferred into them
 after the landrush period. Any veHNT transferred out of a landrush position will lose the 3x
 multiplier bonus.
 
-You must undelegate both positions before transferring a stake between positions. Transferring to a new
-position requires the original position to be undelegated. You can redelegate one or both positions
-after the split is complete.
+You must undelegate both positions before transferring a stake between positions. Transferring to a
+new position requires the original position to be undelegated. You can redelegate one or both
+positions after the split is complete.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/transfer.png')} style={{ maxHeight: 300 }} />
