--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -239,6 +239,8 @@ losing the multiplier for the tokens being split or transferred off the position
 
 You must undelegate before splitting a stake. You can redelegate after the split is complete.
 
+Positions that are in any active votes cannot be split.
+
 ### Transfer a Stake
 
 Neither staked tokens nor the NFT representing a stake can be transferred from one wallet to
