--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -239,7 +239,8 @@ losing the multiplier for the tokens being split or transferred off the position
 
 You must undelegate before splitting a stake. You can redelegate after the split is complete.
 
-Positions that are in any active votes cannot be split.
+Positions that are in any active votes cannot be split. To change a position during a vote it must 
+be relinquished from the active vote.```
 
 ### Transfer a Stake
 
