--- a/devblog/2023-04-28-offchain-data-transfer-postmortem.mdx
+++ b/devblog/2023-04-28-offchain-data-transfer-postmortem.mdx
@@ -1,26 +1,28 @@
 ---
 layout: post
-title: Off Chain Data Transfer Post Mortem (4/18 & 4/19)
+title: Off Chain Data Transfer Post Mortem (2023-04-18 & 2023-04-19)
 date: 2023-04-28
 hide_table_of_contents: true
 authors: [lytzV]
 ---
 
-On 4/18, a new Config Service release was deployed as part of the Oracle 1.0.0 release, which
+On 2023-04-18, a new Config Service release was deployed as part of the Oracle 1.0.0 release, which
 included a more rigorous request signature verification. This caused a protobuf mismatch with Packet
 Router and Helium Router.
 
 <!--truncate-->
 
-As a result of that, there were two data transfer outages, separately occurring on 4/18 and 4/19.
+As a result of that, there were two data transfer outages, separately occurring on 2023-04-18 and
+2023-04-19.
 
-- On 4/18, the outage was triggered by the protobuf mismatch between the Packet Router and Config
-  Service. An emergency Packet Router update 0.0.22 was deployed to reconcile the protobuf mismatch.
-- On 4/19, the outage was triggered by the protobuf mismatch between the Helium Router and Config
-  Service, which caused the Helium Router hotspot location request rpc to Config Service to fail. As
-  a result, devices cannot join since DevAddr allocation is based on hotspot location, and it
-  created load & memory issue that leaked into other processes, which also led to degraded uplink &
-  downlink. Emergency Oracle update and Console update 2.2.36 were deployed to reconcile the
+- On 2023-04-18, the outage was triggered by the protobuf mismatch between the Packet Router and
+  Config Service. An emergency Packet Router update 0.0.22 was deployed to reconcile the protobuf
+  mismatch.
+- On 2023-04-19, the outage was triggered by the protobuf mismatch between the Helium Router and
+  Config Service, which caused the Helium Router hotspot location request rpc to Config Service to
+  fail. As a result, devices cannot join since DevAddr allocation is based on hotspot location, and
+  it created load & memory issue that leaked into other processes, which also led to degraded uplink
+  & downlink. Emergency Oracle update and Console update 2.2.36 were deployed to reconcile the
   protobuf mismatch.
 
 ## Next Steps
@@ -47,7 +49,7 @@ also need to have another layer of safety net.
   downlink for all device profiles supported by the LNS. The test shall be initiated by the team
   that tries to introduce the change, and assisted by the LNS team. There are also tests that can be
   automated into the Github Actions.
-- Second, make sure alerts are in place. In the 4/19 incident, if alerts were more exhaustive, our
-  response time could have been faster. Specifically, we have grafana alerts for when join & uplink
-  rate approaching 0. However, turns out grafana could categorize 0 as NONE, hence requiring a
-  separate alarm that monitors for that state.
+- Second, make sure alerts are in place. In the 2023-04-19 incident, if alerts were more exhaustive,
+  our response time could have been faster. Specifically, we have grafana alerts for when join &
+  uplink rate approaching 0. However, turns out grafana could categorize 0 as NONE, hence requiring
+  a separate alarm that monitors for that state.
