--- a/docs/blockchain/transaction-fees.mdx
+++ b/docs/blockchain/transaction-fees.mdx
@@ -29,7 +29,7 @@ as this number is variable based on the current $USD/HNT price as defined by the
 | :------------------------------ | :-------------------------------------------------------------------------------------------------------------- | :------------ | :---------- |
 | Send HNT                        | Transferring HNT from wallet to wallet                                                                          | `Variable`    | `Variable`  |
 | Transferring Device Packet Data | Fee paid by device owner when sending or receiving sensor data. Metered per 24 bytes.                           | `1`           | `$.00001`   |
-| Add Full Hotspot                | Fee paid to add Hotspot to the blockchain. **Fee is generally covered by Hotspot maker**.                  | `4000000`     | `$40`       |
+| Add Hotspot                | Fee paid to add Hotspot to the blockchain. **Fee is generally covered by Hotspot maker**.                  | `4000000`     | `$40`       |
 | Add Data Only Hotspot           | Fee paid to add a Data Only Hotspot to the blockchain.                                                          | `1000000`     | `$10`       |
 | Assert Hotspot Location         | Required when asserting a Hotspot's location. \(The **first assertions** is generaly covered by Hotspot maker\) | `1000000`     | `$10`       |
 | Assert Data Only Location       | Required for Optionally asserting a Data Only Hotspot's Location                                                | `500000`      | `$5`        |
