--- a/docs/faq/docs-installation.mdx
+++ b/docs/faq/docs-installation.mdx
@@ -10,115 +10,133 @@ slug: /faq/docs-installation
 
 # Helium Documentation Installation Guide
 
-## Node.js
+Clone the docs repo from [Github](https://github.com/helium/docs).
 
-Download latest software: External link: [Node.js](https://nodejs.org/en/download) version >=
-10.15.1
+```bash title="clone the repo"
+$ git clone https://github.com/helium/docs.git
+```
+
+Navigate to the `docs` directory
+
+```bash title="navigate to the docs directory"
+$ cd docs/
+```
+
+---
+
+## Prerequisites
+
+### Install Node.js
+
+Download and install the latest version of [Node.js](https://nodejs.org/en/download).
+
+```bash title="Verify the installation."
+$ node --version
+v18.16.0
+```
 
 :::info
 
-Windows Node.js installation you do not need to install the Compiler and Chocolaty dependencies.
+Windows users installing Node.js do not need to install the `Compiler` nor `Chocolaty` dependencies.
 
 :::
 
-Install Node.js
+### Install Yarn
 
-## Yarn
+After installing Node.js, npm will be installed and can be used to install Yarn.
 
-Download software: External link: [Yarn](https://yarnpkg.com/getting-started/install) version >= 1.5
-
-After you install Node.js, which will install Node.js and npm as a dependency you can do the
-following.
-
-```
+```bash title="install yarn"
 $ npm install -g yarn
-
 > yarn@1.22.11 preinstall /path/to/npm/node_modules/yarn
 > :; (node ./preinstall.js > /dev/null 2>&1 || true)
 ```
 
-To upgrade the Yarn version to be >= 1.5 you must set each project directory to version berry.
+To upgrade the Yarn version to be >= 1.5, set the project directory to version `berry`.
 
-```
-$ cd ~/path/to/project
+```bash title="set yarn version to berry"
 $ yarn set version berry
-
-Resolving berry to a url...
-Downloading https://github.com/yarnpkg/berry/raw/master/packages/berry-cli/bin/berry.js...
-Saving it into /path/to/fork/docs/.yarn/releases\yarn-berry.cjs...
-Updating /path/to/prjoect/docs/.yarnrc.yml...
-Done!
+➤ YN0000: Retrieving https://repo.yarnpkg.com/3.5.1/packages/yarnpkg-cli/bin/yarn.js
+➤ YN0000: Saving the new release in .yarn/releases/yarn-3.5.1.cjs
+➤ YN0000: Done in 0s 430ms
 ```
 
-Then you can install Yarn which will download and compile all the project module dependencies.
+### Install Dependencies
 
-```
+Install Yarn which will download and compile all the project module dependencies.
+
+```bash title="install yarn and dependencies"
 $ yarn install
+➤ YN0070: Migrating from Yarn 1; automatically enabling the compatibility node-modules linker 👍
 
- YN0070: Migrating from Yarn 1; automatically enabling the compatibility node-modules linker
- ...
- YN0007: │ yarn@npm:1.22.10 must be built because it never has been before or the last one failed
- YN0007: │ core-js@npm:3.12.1 must be built because it never has been before or the last one failed
- YN0007: │ core-js-pure@npm:3.12.1 must be built because it never has been before or the last one failed
- YN0000: └ Completed in 42s 725ms
- YN0000: Done with warnings in 1m 31s
+➤ YN0000: ┌ Resolution step
+...
+➤ YN0000: └ Completed in 4s 287ms
+➤ YN0000: ┌ Fetch step
+...
+➤ YN0000: └ Completed in 9s 723ms
+➤ YN0000: ┌ Link step
+...
+➤ YN0000: └ Completed in 8s 494ms
+➤ YN0000: Done with warnings in 22s 635ms
 ```
 
 Check the final version and confirm that it is >= 1.5
 
-```
+```bash title="verify yarn version"
 $ yarn --version
-3.0.1
+3.5.1
 ```
 
-### Local Development
+---
 
-```
+## Local Development
+
+```bash title="start the development server"
 $ yarn start
+[INFO] Starting the development server...
+[SUCCESS] Docusaurus website is running at: http://localhost:3000/
 
-Starting the development server...
-Docusaurus website is running at: http://localhost:3000/
+✔ Client
+  Compiled successfully in 25.06s
 
-√ Client
-  Compiled successfully in 5.90s
+client (webpack 5.76.3) compiled successfully
 
-i ｢wds｣: Project is running at http://localhost:3000/
-i ｢wds｣: webpack output is served from /
-i ｢wds｣: Content not from webpack is served from /path/to/project/docs
-i ｢wds｣: 404s will fallback to /index.html
+✔ Client
+  Compiled successfully in 542.45ms
 
-* Client ... done (99%) plugins
- WebpackDevMiddleware
+client (webpack 5.76.3) compiled successfully
 ```
 
 This command starts a local development server and open up a browser window. Most changes are
 reflected live without having to restart the server.
 
-### Link Checking before your PR
+### Auto Refresh
+
+Each time a file is saved the site will get rebuilt and the pages refreshed on the fly, there is no
+need to keep restarting Yarn.
+
+---
+
+## Link Checking Before Creating a Pull Request
 
 Checking links can be accomplished by using the `yarn build` command
 
-```
+```bash title="make production build"
 $ yarn build
+[INFO] [en] Creating an optimized production build...
 
-[en] Creating an optimized production build...
+✔ Client
 
-√ Client
+✔ Server
+  Compiled successfully in 30.22s
 
-√ Server
-  Compiled successfully in 1.25m
+bigint: Failed to load bindings, pure JS will be used (try npm run rebuild?)
 
-√ Client
+✔ Client
 
-* Server █████████████████████████ cache (99%) shutdown IdleFileCachePlugin
+● Server █████████████████████████ cache (99%) shutdown IdleFileCachePlugin
  stored
 
-Success! Generated static files in build.
-
-Use `npm run serve` to test your build locally.
+[SUCCESS] Generated static files in "build".
+[INFO] Use `npm run serve` command to test your build locally.
 ```
-
-### Developing
-
-Each time you save files under your local repo the site will get rebuilt and the pages refreshed on
-the fly, there is no need to keep restarting Yarn.
