--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -190,7 +190,7 @@ FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
 
 ---
 
-### Helium Hotspot - for OG and FreedomFI only
+### Helium Hotspot - for OG and FreedomFI 
 
 - Discord : https://discord.gg/helium
 - iOS App: https://apps.apple.com/us/app/helium-hotspot/id1450463605
@@ -243,7 +243,8 @@ FreedomFi Hotspots can now use the Helium Hotspot App to onboard and manage
 
 - Discord : https://discord.gg/n3E3gvZr6b
 - Local Dashboard: http://dashboard.longap.com/
-
+- App : LongAp will not be releasing their own App at present but have confirmed the Helium Hotspot
+  app can be used for location asserting.
 ---
 
 ### MerryIoT (Browan)
