Update voting-power.mdx (#1308)
* Update voting-power.mdx

Put landrush in past tense, clarified positon closure process.

* line wrap

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/vote-escrow/voting-power.mdx
+++ b/docs/vote-escrow/voting-power.mdx
@@ -49,7 +49,9 @@ to a subDAO will count towards the DAO Utility Score, the `V` value referenced i
 
 If you lock up your HNT for veHNT, your HNT will become veHNT and remain entirely in your wallet's
 custody. veHNT ownership is represented by a non-transferable Solana NFT held in your wallet. At the
-end of the lock-up period, you will receive HNT back to your wallet 1:1 for the HNT you staked.
+end of the lock-up period, any received tokens need to be claimed, the position undelegated, and
+then after a close positon action is taken you will receive HNT back to your wallet 1:1 for the HNT
+you staked.
 
 ### What Is a "Lock-Up" Period?
 
@@ -130,13 +132,13 @@ Staking HNT for veHNT will be done on [Realms](https://realms.heliumvote.com/dao
 
 ### Is There a Staking "Genesis" Period?
 
-For the first ten days after Helium's migration onto Solana, there will be a 3x multiplier bonus for
-new veHNT stakers. This is called the "Landrush" multiplier.
+For the first ten days after Helium's migration onto Solana, there was a 3x multiplier bonus for new
+veHNT stakers. This is called the "Landrush" multiplier.
 
-New stakers are only eligible to receive this veHNT bonus during the initial ten-day Landrush
-period. HNT staked after this period will receive veHNT at the normal rate with no multiplier.
+New stakers were only eligible to receive this veHNT bonus during the initial ten-day Landrush
+period. HNT staked now, after this period will receive veHNT at the normal rate with no multiplier.
 
-This landrush period will end at 23:59:59 UTC on April 28, 2023.
+This landrush period ended at 23:59:59 UTC on April 28, 2023.
 
 For example:
 
