Update voting-power.mdx (#1311)
* Update voting-power.mdx

Changed tense about Landrush from future to past.

* line wraps

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/vote-escrow/voting-power.mdx
+++ b/docs/vote-escrow/voting-power.mdx
@@ -201,7 +201,7 @@ delegation rewards within that Epoch. A Solana Epoch is 24 hours long and starts
 ### How Granular Is The veHNT Linear Decrease?
 
 The veHNT decay countdown starts when initiated from the Wallet app/Realms, either immediately in
-"cliff" mode or after a "constant lockup" is unlocked and cooldown started.
+"decay" mode or after a "constant lockup" is unlocked and cooldown started.
 
 veHNT quantity decay is granulated per second even though the Epoch period is 24 hours.
 
