--- a/docs/hotspot-makers/hotspot-manufacturers.mdx
+++ b/docs/hotspot-makers/hotspot-manufacturers.mdx
@@ -8,19 +8,16 @@ image: https://docs.helium.com/img/link-image.png
 slug: /hotspot-makers/hotspot-manufacturers
 ---
 
-Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network.
-(These are often referred to as "OGs."). Nova Labs no longer manufacturers Hotspots, but there is
-now an extensive list of approved manufacturers (known in the community as "Makers")
 
 <!-- TODO: section in docs for Manufacturing topics - migrate from google docs and notion -->
 
 <!-- TODO: links to ethics docs -->
 
-- All approved Hotspots can be found [here](/mine-hnt).
+- All approved Hotspots can also be found [here](/mine-hnt).
 
 <!-- TODO: check this link 👆, likely in notion, should pull into docs -->
 
-<!-- TODO: every product is approved, not every Maker -->
+<!-- TODO: every product is approved by the Manufacturing Compliance Committee (MCC), not every Maker -->
 
 <!-- TODO: merge man docs with maker apps list -->
 
@@ -34,3 +31,52 @@ owning wallet can transfer it to another. Any transfers are solely between the t
 and "Seller"), and Helium is not involved.
 
 :::
+## Approved Makers
+
+Nova Labs (formerly known as Helium Systems, Inc) was the first Hotspot manufacturer. Starting in
+early 2019, they produced the first hardware capable of mining HNT and providing LoRaWAN wireless
+coverage. In total, Nova Labs produced and sold the first 13,000 Hotspots to the Helium community to
+seed the Network. These Hotspots are often referred to as "OGs.". Nova Labs no longer manufacturers Hotspots, but there is
+now an extensive list of approved manufacturers (known in the community as "Makers")
+
+
+Since the introduction of
+[HIP-19](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md), additional
+approved Makers have been added. Each approved Maker is given a unique onboarding address on the
+Helium blockchain where they are required to [burn data credits](/blockchain/transaction-fees) to
+onboard their unique Hotspots before they are granted access to the blockchain.
+
+| Maker Name                                              | HIP-19 Application                                                                                           | Company Links | Onboarding Maker Address                                                                                                                            |
+| :------------------------------------------------------------- | :----------------------------------------------------------------------------------------------- | :---------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Aiteks](https://shop.aiteks.com/)   | [Aiteks](https://github.com/dewi-alliance/hotspot-manufacturers/blob/0d63e182f1381888d017ebf867c860d53ee8bd83/applications/Aitek-inc.md)        | [Website](https://shop.aiteks.com/)      [Discord](https://discord.gg/nrVjTE9vBp)         [Email](info@aiteks.com) | Need to add |
+| [Atom](https://www.atomdesign.io)           | [Proton](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/atom-design-and-innovation.md) | [Discord](https://discord.gg/sBQP69fcGd) | Need to add |
+| [Bobcat / Bobber](http://bobber.com/)        | [Bobber 300](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/easylinkin.md)       [Bobber 200](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/bobcat-light-audit.md)    |       [Discord](https://discord.gg/2Barf528uj)  [Support](https://zendesk.bobber.com/hc/en-us/requests/new)  | [14sKWeeYWQWrBSnLGq79uRQqZyw3Ldi7oBdxbF6a54QboTNBXDL](https://explorer-old.helium.com/accounts/14sKWeeYWQWrBSnLGq79uRQqZyw3Ldi7oBdxbF6a54QboTNBXDL) |
+| [ClodPi](https://clodpi.io/)                   | [ClodPi](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/clodpi.md)            | [Discord](https://discord.gg/unJjAtZHBZ)   | [13XuP2DjHEHVkKguDDZD2ev5AeqMLuJ8UQ44efEcDmVTnBcvc6F](https://explorer-old.helium.com/accounts/13XuP2DjHEHVkKguDDZD2ev5AeqMLuJ8UQ44efEcDmVTnBcvc6F) |
+| Controllino/Conelcom          | Controllino no longer sells Hotspots  [Nebra  has taken over support for Controllino Hotspots](https://www.nebra.com/blogs/news/nebra-ltd-providing-updates-for-controllino-conelcom-hotspots) | [Discord](https://discord.gg/sBQP69fcGd) | ----- |
+| [COTX](https://www.cotxnetworks.com/)         | [Model X3](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/cotx-networks.md) [Model X5](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/cotx_outdoor-full-hotspot.md)  [Model X1](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/cotx_light-hotspot.md) | [Discord](https://discord.gg/s8NAKj7Vfx) | Need to add |
+| [Dragino](https://www.dragino.com))         | [Full Outdoor Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/dragino-full-hotspot.md)     [Light Indoor Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/dragino-light-hotspot.md) [Light Outdoor Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/dragino-light-hotspot.md) | [Discord](https://discord.gg/KSwbc6EsRJ) | Need to add |
+| [Dusun](https://www.dusuniot.com/)         | [Full Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/dusun.md)     [DSGW-090B](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/dusun_light_hotspot.md) [DSG-010C](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/dusun_outdoor.md) | [Discord](https://discord.gg/KSwbc6EsRJ) | Need to add |
+| [EDATec / EDA-IoT](https://www.eda-iot.com)      | [Full Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/edatec.md)    [Light Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/edatec-light.md) | [Discord](https://discord.gg/SKwEeSreJu)      [Support](support@edatec.cn)   | Need to add |
+| [Finestra / Mimiq Inc. (Previously Smart Mimic)](https://smartmimic.com)                   | [Smart Mimic](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/smart-mimic.md)  | [Website](https://thefinestra.com) | [13MS2kZHU4h6wp3tExgoHdDFjBsb9HB9JBvcbK9XmfNyJ7jqzVv](https://explorer-old.helium.com/accounts/13MS2kZHU4h6wp3tExgoHdDFjBsb9HB9JBvcbK9XmfNyJ7jqzVv) |
+| [FreedomFi](https://freedomfi.com/) FreedomFi has been acquired by Nova Labs    | [Full Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/freedomfi.md)  | [Support](https://freedomfi.com/)   | Need to add |
+| [Heltec](https://heltec.org/)  | [HT-2808](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/heltec.md)    [HT-M7603](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/heltec-light.md)  |  [Discord](https://discord.gg/Pt85TrZfxZ)  [Support](https://docs.heltec.org/) [Email](support@heltec.cn) | Need to add |
+| [Hummingbird / RUFF](https://www.xdt.com) | [Hummingbird](https://github.com/ruffjs/HIP/blob/master/0019-third-party-manufacturers/ruff.md) |  [Discord](https://discord.gg/wUk9nfFGZW) | Need to add |
+| [Kerlink](https://www.kerlink.com)                      | [Kerlink](https://github.com/dewi-alliance/hotspot-manufacturers/tree/main/applications/kerlink)             | [Discord](https://discord.gg/9sYADWvZPg)  | [13Mpg5hCNjSxHJvWjaanwJPBuTXu1d4g5pGvGBkqQe3F8mAwXhK](https://explorer-old.helium.com/accounts/13Mpg5hCNjSxHJvWjaanwJPBuTXu1d4g5pGvGBkqQe3F8mAwXhK) |
+| [KS Technologies](https://kstechnologies.com/)| [Affinity Gateway](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/ks-technologies.md) |  [Email](info@kstechnologies.com) | Need to add |
+| [Linxdot / FX Technilogy](https://www.linxdot.com)| [Full Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/linxdot.md)  [LD1001 & LD1002](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/linxdot-rockchip.md) [LD-500 & LD-559](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/linxdot-light-hotspots.md)   [5G](https://github.com/dewi-alliance/hotspot-manufacturers/blob/6d837055a189fa2e19b5f3c4163b4d75d524a268/linxdot-5g-hotspot.md) |  [Discord](https://discord.gg/8uDT3Hve)| Need to add |
+| [LongAP/HeNet BV](https://www.longap.com) |  No longer sell Hotspots |         [Email Support](support@longap.co)    | [12zX4jgDGMbJgRwmCfRNGXBuphkQRqkUTcLzYHTQvd4Qgu8kiL4](https://explorer-old.helium.com/accounts/12zX4jgDGMbJgRwmCfRNGXBuphkQRqkUTcLzYHTQvd4Qgu8kiL4) |
+| [Merry IoT / Browan ](https://www.browan.com/) | [Full Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/merryiot.md) [Light Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/MerryIoT%20Light%20Hotspot%20V2.md) |  [Support](support@merryiot.com) | Need to add |
+| [Midas](https://www.midaswireless.io/) | [Full Hotspot](https://github.com/helium/HIP/blob/3768d9bbdaf9cd0e9377ce61ac86424393b354ff/0019-third-party-manufacturers/midas.md) [Light Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/midas-light-hotspot.md) |  [Discord](https://discord.gg/yFSTWJrA6R) | Need to add |
+| [Milesight IoT](www.milesight-iot.com)| [Full Hotspot](https://github.com/helium/HIP/blob/bd53cbb57621b63b832163960ea2dd8fb78b1c72/0019-third-party-manufacturers/Milesight%20IoT.md) |  [Discord](https://discord.gg/2wAbU4eyRy)| Need to add |
+| [Nebra Ltd](https://www.nebra.com/)                     | [Nebra](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/nebra-ltd.md)     [5G](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/nebra-5g-ready.md)     | [Website](https://www.nebra.com/)  |  [13Zni1he7KY9pUmkXMhEhTwfUpL9AcEV1m2UbbvFsrU9QPTMgE3](https://explorer-old.helium.com/accounts/13Zni1he7KY9pUmkXMhEhTwfUpL9AcEV1m2UbbvFsrU9QPTMgE3) |
+| Nova Labs / Helium Systems, Inc.           |  No longer sell Hotspots                          |      ---      | [13daGGWvDQyTyHFDCPz8zDSVTWgPNNfJ4oh31Teec4TRWfjMx53](https://explorer-old.helium.com/accounts/13daGGWvDQyTyHFDCPz8zDSVTWgPNNfJ4oh31Teec4TRWfjMx53) |
+| [Panther / E-sun Electronics](https://panther.global/)   | [PantherX](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/pantherx.md)        | [Discord](https://discord.gg/CQCpPNeekn)     [Support](http://panther.global)   | [13v9iGhjvQUtVaZXcFFRCEbL1nPR4R8QJowBgMUcaGM2v1aV6mn](https://explorer-old.helium.com/accounts/13v9iGhjvQUtVaZXcFFRCEbL1nPR4R8QJowBgMUcaGM2v1aV6mn) |
+| [Pisces](http://www.piscesminer.com/)| [Full Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/pisces-miner.md) [Light Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/Pisces-Indoor-Light-Hotspot.md) |  [Discord](https://discord.gg/cBwEUxHcn4) | Need to add |
+| [Polyhex](http://www.polyhex.net/)| [Full Hotspot](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/Polyhex.md)  |  [Discord](https://discord.gg/Xx32dUy377) | Need to add |
+| Pycom         | Pycom no longer sells Hotspots  [Nebra  has taken over support for Pycom Hotspots](https://www.nebra.com/blogs/news/infrastructure-migration-and-pycom-software) | [Discord](https://discord.gg/sBQP69fcGd) | ----- |
+| [RAK Wireless](https://www.rakwireless.com/) | [RAK](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/rak-wireless.md) | [Discord](https://discord.gg/j92Nu5nmP9)  | [13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY](https://explorer-old.helium.com/accounts/13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY) |
+| [Seeed/SenseCap](https://www.sensecapmx.com/)           | [Seeed/SenseCap](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/seeed.md)     | [Discord](https://discord.gg/QqMgVwHT3X)    | [14NBXJE5kAAZTMigY4dcjXSMG4CSqjYwvteQWwQsYhsu2TKN6AF](https://explorer-old.helium.com/accounts/14NBXJE5kAAZTMigY4dcjXSMG4CSqjYwvteQWwQsYhsu2TKN6AF) |
+| [Smart Harvest](https://smartharvest.ca/) | [HL100](https://github.com/SmartHarvestInstruments/HIP/blob/master/0019-third-party-manufacturers/smart-harvest-instruments.md)  |   [Email](support@smartharvest.ca) | Need to add |
+| [SONoC](https://sonoc.tw/) | [SL100](https://github.com/dewi-alliance/hotspot-manufacturers/blob/0d50f13b6942de34dcbf87b64f8d795f4c57189f/SONoC.md)  |   [Email](support@SONoC.tw)   [Discord](https://discord.com/invite/jVRadSDNew) | Need to add |
+| SyncroB.it            | SyncroB.it no longer sells Hotspots      [Nebra  has taken over support for SyncroB.it Hotspots](https://www.nebra.com/blogs/news/syncrobit-hotspots-join-nebra-family) | ---- | [14rb2UcfS9U89QmKswpZpjRCUVCVu1haSyqyGY486EvsYtvdJmR](https://explorer-old.helium.com/accounts/14rb2UcfS9U89QmKswpZpjRCUVCVu1haSyqyGY486EvsYtvdJmR) |
+| [uGWAN / Amber-Link](https://www.ugwan.io/) | [uGWAN Pro](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/ugwan-pro-ecc608.md)  |   [Email](support@ugwan.io)   | Need to add |
