formatting and copy edits, address feedback

--- a/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
@@ -8,25 +8,37 @@ image: https://docs.helium.com/img/link-image.png
 slug: /mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
 # Maker Approval and Auditing Process
 
-Due to the previous overwhelming demand for Hotspots, the community designed and approved a process 
-for adding new, verified manufactures to the ecosystem.
-[This is known has HIP-19](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md).
-With HIP-19 in place, companies can submit an application to be reviewed by the community and the
+The community designed and approved a process for adding new, verified Hotspot Makers to the Helium
+ecosystem with HIP19<sup>(</sup>[^1]<sup>)</sup>.
+
+[^1]:
+    [HIP19: Approval Process For Third-Party Manufacturers](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md)
+
+With HIP19 in place, companies can submit an application to be reviewed by the community and the
 [Helium Foundation](https://www.helium.foundation).
 
-The full process for approving and auditing new manufacturers is as follows
-([originally outlined in this blog post](https://docs.helium.com/devblog/2021/01/26/maker-audit.html)):
+The process initially outlined in
+[this blog post](https://docs.helium.com/devblog/2021/01/26/maker-audit.html) for approving and
+auditing new Makers is as follows:
 
 1. Makers submit a HIP-19 Proposal.
-2. Helium Foundation sends KYC/B request for documentation.
-3. Helium Foundation approves KYC/B and sends hardware audit information.
+2. Helium Foundation sends a KYC/B request for documentation.
+3. Helium Foundation approves the KYC/B and sends hardware audit information.
 4. Makers send hardware samples for audit.
 5. Makers obtain and send regulatory radio certifications. \*steps 4 and 5 can happen at the same
    time
-6. Once Makers pass hardware audit, they are allowed to proceed to Network Integration.
-7. The final stage of Network Integration is being able to add Hotspots to the Onboarding Server.
+6. Once hardware samples pass the hardware audit, they can proceed to Network Integration.
+7. The final stage of Network Integration is adding Hotspots to the Onboarding Server.
 
-Note: Helium does not specifically endorse or recommend makers, manufacturers or vendors, it approves 
-the hotspots the makers produce can operate on the network to HIP 19 requirements.
+:::note
+
+The Helium Foundation does not explicitly endorse or recommend Makers, Manufacturers, or Vendors.
+
+The Manufacturing Compliance Committee approves Hotspots produced by Makers to operate on the Helium
+Network.
+
+:::
