--- a/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing.mdx
@@ -29,8 +29,7 @@ auditing new Makers is as follows:
 2. Helium Foundation sends a KYC/B request for documentation.
 3. Helium Foundation approves the KYC/B and sends hardware audit information.
 4. Makers send hardware samples for audit.
-5. Makers obtain and send regulatory radio certifications. \*steps 4 and 5 can happen at the same
-   time
+5. Makers obtain and send regulatory radio certifications.
 6. Once hardware samples pass the hardware audit, they can proceed to Network Integration.
 7. The final stage of Network Integration is adding Hotspots to the Onboarding Server.
 
